# hackathon-book

./: .env  vercel.json
.specify/memory/: constitution.md
backend/: .env  agent.py  main.py  pyproject.toml  retrieving.py
history/prompts/001-ros2-fundamentals/: 2-create-ros2-fundamentals-spec.spec.prompt.md  3-create-ros2-fundamentals-plan.plan.prompt.md  4-create-ros2-fundamentals-tasks.tasks.prompt.md  5-implement-ros2-fundamentals-website.implementation.prompt.md
history/prompts/002-gazebo-unity-digital-twin/: 6-create-gazebo-unity-digital-twin-spec.spec.prompt.md  7-create-gazebo-unity-digital-twin-plan.plan.prompt.md  8-generate-tasks-for-gazebo-unity-digital-twin-module.tasks.prompt.md  (+1 more)
my-website/: docusaurus.config.ts  fix-md-links.js  package-lock.json  sidebars.ts
my-website/src/pages/: index.tsx
specs/001-ros2-fundamentals/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gazebo-unity-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/2-retrieval-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/3-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/4-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+126 files in other folders)
